--- a/css/try.css
+++ b/css/try.css
@@ -1,76 +1,39 @@
-*,*::before,*::after{
-    box-sizing: border-box;
-}
-
-body{
-    font-size: 24px;
-    line-height: 1.4;
-    font-weight: 600;
-    font-family: "PingFang TC";
-    color:#3F5D45;
-}
-
-img{
-    max-width: 100%;
-    display: block;
-}
-
-.wrap{
-    width: 952px;
+.dessert_menu {
+    width: 620px;
     margin: 0 auto;
-    display: flex;
-    gap: 24px;
-    padding: 4px;
 }
 
-.h2{
-    padding: 16px 102px;
-    background: #3F5D45;
-    color:#FFFFFF;
-    text-align: center;
-}
-
-.category{
-    width: 300px;
-    flex-shrink: 0;
-}
-
-.category_items li{
-    width: 300px;
-    text-align: center;
-    padding: 18px 0;
-    border: 1px solid #EAF0ED;    
-}
-
-.bg{
-    background: #EAF0ED;
-}
-
-.dessert{
+.dessert {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    margin-bottom: 30px;
+    padding-top: 10px;
 }
 
-
-.dessert_name{
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
+.dessert li {
+    width: 300px;
 }
 
-.name{
-    padding: 16px 43px;
+.phpto {
+    position: relative;
 }
 
-.NT{
-    padding: 16px;
+.heart {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
-.addcart{
-    display: block;
-    text-decoration: none;
-    padding: 24px 0;
-    text-align: center;
-    color: #3F5D45;
+.mark {
+    position: absolute;
+    /* bottom: 10px; */
+    top:0;
+    left:20px;
+    /* right: 220px; */
+    /* left: 10px; */
+    writing-mode: vertical-lr;
+    padding: 10px;    
+    color: #EAF0ED;
+    background-color: #3F5D45;
 }
