--- a/css/try.css
+++ b/css/try.css
@@ -1,39 +1,18 @@
-.dessert_menu {
-    width: 620px;
-    margin: 0 auto;
+.container{
+    border: 1px solid red;    
+}
+h1{
+    float:left;  /*文字要靠在左邊*/
+    
 }
 
-.dessert {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 30px;
-    padding-top: 10px;
-}
-
-.dessert li {
-    width: 300px;
-}
-
-.phpto {
-    position: relative;
-}
-
-.heart {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.mark {
-    position: absolute;
-    /* bottom: 10px; */
-    top:0;
-    left:20px;
-    /* right: 220px; */
-    /* left: 10px; */
-    writing-mode: vertical-lr;
-    padding: 10px;    
-    color: #EAF0ED;
-    background-color: #3F5D45;
+h1 a{
+    background-image: url(../img/logo.png);
+    width: 1811px;
+    height: 627px;
+    display: block;
+    text-indent: 101%; /*讓文字超出範圍*/
+    overflow: hidden; /*超出範圍的隱藏*/
+    white-space: nowrap; /*讓字不會被卡掉，會完整顯示*/
+    
 }
