--- a/homework/css/before_class2_homework.css
+++ b/homework/css/before_class2_homework.css
@@ -25,9 +25,9 @@ a {
 }
 
 .container {
-    width: 1024px;
+    width: 940px;
     margin: 0 auto;
-    padding: 30px 42px 60px 42px;
+    padding: 30px 0px ;
 }
 
 .bg-3F5D45 {
@@ -40,6 +40,11 @@ a {
 
 .header {
     margin-bottom: 30px;
+}
+
+.wrap{
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar {
@@ -133,6 +138,7 @@ a {
     font-size: 16px;
     padding: 10.08px 10px 9.24px 10px;
     color: #EAF0ED;
+    letter-spacing: 3px;
 }
 
 .detail {
@@ -145,6 +151,7 @@ a {
     padding: 14px 33px;
     font-weight: 300;
     border: 1px solid #EAF0ED;
+    flex-grow: 1;
 }
 
 .NT {
@@ -152,11 +159,13 @@ a {
     border: 1px solid #EAF0ED;
 }
 
-
 .addcart {
     color: #3F5D45;
     padding: 16px 89px;
     border: 1px solid #EAF0ED;
+    font-size: 24px;
+    font-weight: 600;
+    width: 300px;
 }
 
 .addcart:hover {
