--- a/css/weektwo.css
+++ b/css/weektwo.css
@@ -6,123 +6,123 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: "Bruno Ace SC", sans-serif;
     font-size: 24px;
     line-height: 1.5;
 }
 
-img{
+img {
     display: inline-block;
     max-width: 100%;
     height: auto;
 }
 
-a{
+a {
     text-decoration: none;
     color: #000000;
 }
 
-.d-flex{
+.d-flex {
     display: flex;
 }
 
-.aic{
+.aic {
     align-items: center;
 }
 
-.fz-s{
+.fz-s {
     font-size: 16px;
 }
 
-.gap-m{
+.gap-m {
     gap: 24px;
 }
 
-.container{
+.container {
     width: 1296px;
     margin: 0 auto;
 }
 
-.header{
+.header {
     background-color: #000000;
     width: 100%;
 }
 
-.navbar{    
+.navbar {
     padding: 40px 0px;
 }
 
-.menu{
-    color:#D1D1D1;
+.menu {
+    color: #D1D1D1;
     justify-content: space-between;
 }
 
-.txt{
+.txt {
     margin-left: 24px;
     flex-grow: 1;
     flex-direction: column;
 }
 
-.title{
+.title {
     font-size: 64px;
     color: #FFFFFF;
 }
 
-.name{
+.name {
     font-size: 128px;
-    color:#00FFA3;
-    align-self:flex-end;
+    color: #00FFA3;
+    align-self: flex-end;
 }
 
-.contant{
+.contant {
     padding: 12px 24px;
     background-color: #FFFFFF;
     color: #000000;
-    align-self:flex-end;
+    align-self: flex-end;
     border-radius: 32px;
 }
 
-.contant:hover{
+.contant:hover {
     background-color: #00FFA3;
 }
 
-.introduction{
+.introduction {
     background-image: url(https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/background-img.png?raw=true);
     padding: 160px 0px;
-    background-repeat: repeat-x ;
+    background-repeat: repeat-x;
 }
 
-.introduction_content{
+.introduction_content {
     width: 526px;
     flex-grow: 1;
     color: #FFFFFF;
 }
 
-.content{
+.content {
     margin-top: 36px;
 }
 
-.mb-32{
+.mb-32 {
     margin-bottom: 32px;
 }
 
-.about{
+.about {
     padding: 160px 0px;
     font-size: 20px;
 }
 
-.about .container{
+.about .container {
     gap: 134px;
 }
 
-.items{
+.items {
     flex-wrap: wrap;
     width: 636px;
     margin: 24px 0;
 }
 
-.items li{
+.items li {
     border: 1px solid #E3E3E3;
     box-shadow: 4px 4px 4px 0px #00000014;
 
@@ -130,79 +130,86 @@ a{
     padding: 16px;
 }
 
-.about_me{
+.about_me {
     width: 526px;
 }
 
-.about_me .title{
+.about_me .title {
     color: #000000;
 }
 
-.contact_me{
+.contact_me {
     background: linear-gradient(180deg, #050014 0%, rgba(1, 2, 30, 0.89) 100%);
 }
 
-.contact_me .container{
+.contact_me .container {
     padding: 96px 0;
     justify-content: space-between;
 }
 
-.contact{
+.contact {
     gap: 16px;
 }
 
-.icons{
+.icons {
     gap: 20px;
 }
 
-.active img{
+.active img {
     box-shadow: 0px 0px 16px 3px #9094FFE5;
     border-radius: 24%;
 }
 
-.icons li img:hover{
+.icons li img:hover {
     box-shadow: 0px 0px 16px 3px #9094FFE5;
     border-radius: 24%;
 }
 
-.my_projects .container{
-    padding:160px 0 ;
+.my_projects .container {
+    padding: 160px 0;
 }
-.my_projects .title{
+
+.my_projects .title {
     color: #000000;
     width: 746px;
     margin-left: auto;
     margin-bottom: 16px;
 }
 
-.projects_content .d-flex{
+.d-flexc {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.projects_text{
+.projects_text {
     color: #15161D;
 }
 
-.see_more a{
+.see_more a {
+    border-radius: 32px;
     padding: 12px 24px;
     background-color: #000000;
-    border-radius: 32px;
     color: #FFFFFF;
+    font-size: 16px;
 }
 
-.projects_photos{
+.see_more a:hover{
+    background-color: green;
+}
+
+.projects_photos {
     margin-top: 28px;
     justify-content: space-between;
 }
 
-.footer{
+.footer {
     padding: 40px 0px;
     text-align: center;
     background-color: #000000;
     width: 100%;
 }
 
-.footer_content{
-    color: #FFFFFF;    
+.footer_content {
+    color: #FFFFFF;
 }
