--- a/css/try.css
+++ b/css/try.css
@@ -1,18 +1,60 @@
-.container{
-    border: 1px solid red;    
-}
-h1{
-    float:left;  /*文字要靠在左邊*/
-    
+.header {
+    background-size: cover;
+    background-position: center center;
+    background-image: url(../asset/img/header_desktop.png);
+    background-repeat: no-repeat;
 }
 
-h1 a{
-    background-image: url(../img/logo.png);
-    width: 1811px;
-    height: 627px;
+.header .banner {
+    min-height: 420px;
+}
+
+.header .menu-bg {
+    min-height: 58px;
+    background: #ff0000;
+    position: relative;
+}
+
+.header .menu {
+    top: 0;
+}
+
+.header .menu ul a {
     display: block;
-    text-indent: 101%; /*讓文字超出範圍*/
-    overflow: hidden; /*超出範圍的隱藏*/
-    white-space: nowrap; /*讓字不會被卡掉，會完整顯示*/
-    
+}
+
+.header .menu ul li {
+    color: #fff;
+}
+
+.header .menu ul li a:hover {
+    font-weight: bolder;
+}
+
+.header .banner-title {
+    max-width: 460px;
+    background: #ff0000;
+    color: #fff;
+}
+
+.header .main-menu {
+    background: #ff0000;
+    overflow: hidden;
+}
+
+.header .main-menu a:hover {
+    background: #ff0000;
+}
+
+.header .hamburger-menu {
+    display: block;
+    float: right;
+}
+
+.header .menu-show {
+    max-height: 165px;
+}
+
+.header .block-md {
+    display: block;
 }
